fixed hero on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1842,7 +1842,7 @@ body.no-scroll {
         gap: 15px;
         flex-direction: column;
         justify-content: center;
-        margin-bottom: 115px;
+        margin-bottom: 15%;
     }
 
     .hero__title {
